# bounty-hunter

./: .env.example  .gitignore  AGENTS.md  BOT_CV.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  agent.md  bootstrap.md  pyproject.toml  requirements.txt  state.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cleanup-prs.yml  close-pr.yml  fork-cleanup.yml  hunt-batch.yml  hunt.yml  mergeos-onboarding.yml  notify.yml  post-issue-comment.yml  pr-monitor.yml  review-bot.yml  submit-pr.yml  telegram-handler.yml
docs/: ROADMAP.md  agent_memory.json  archive_ledger.json  post_mortem_cycle_4.md
docs/platform_policies/: mergeos.md
scripts/: pr_252_response_comment.md  send_dework_migration_alert.py  send_house_in_order_alert.py  send_mergeos_gate_alert.py  send_pr_ready_alert.py
scripts/swift_fix/: SwipeTransitionAnimator.swift  SwipeableTabBarController.swift
solutions/issue_1_changelog/: SOLUTION_README.md  generate_changelog.py
solutions/issue_3_hook/: SOLUTION_README.md  pre_tool_use_bash_guard.py
solutions/issue_4_pr_review/: SOLUTION_README.md  pr_review_agent.py
src/: __init__.py  config.py  health.py  pipeline.py
src/analyzers/: __init__.py  ai_helper.py  contract_downloader.py  doubt_review.py  vuln_detector.py
src/reporters/: __init__.py  drafter.py  poc_generator.py  review_handler.py
src/scrapers/: __init__.py  algora.py  base.py  bountycaster.py  code4rena.py  dework.py  immunefi.py  issuehunt.py  sherlock.py
src/utils/: __init__.py  batch_executor.py  capability_matrix.py  github_client.py  logger.py  memory_registry.py  persona.py  platform_onboarding.py  polyglot_runner.py  retry.py  sanitizer.py  state.py  state_manager.py  telegram.py  telegram_callback_handler.py
tasks/: plan.md  todo.md
tests/: conftest.py  test_config.py  test_health.py  test_pipeline.py  test_smoke.py
tests/test_analyzers/: test_ai_helper.py  test_contract_downloader.py  test_doubt_review.py  test_vuln_detector.py
tests/test_reporters/: test_drafter.py  (+1 more)
(+20 files in other folders)
